--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SingSpeak</title>
     <link rel="icon" href="styles/images/logotipo.png">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1>Hi</h1>
+    <div class="mainPage">
+        <div class="logo">
+                <img src="styles/images/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
+        </div>
+        <div class="mainForms">
+            <div class="singupForm">
+                <form method="post" id="signupForm">
+                    <label for="signupUsername">Nome de Usuário</label> <br>
+                    <input type="text" placeholder="Username" id="signupUsername"> <br>
+                    <label for="signupEmail">Endereço de Email</label> <br>
+                    <input type="email" placeholder="Email" id="signupEmail"> <br>
+                    <label for="singupPassword">Senha de Acesso</label> <br>
+                    <input type="password" placeholder="Senha" id="singupPassword"> <br>
+                    <input type="submit" value="Cadastrar" id="signupSubmit">
+                </form>
+            </div>
+            <div class="loginForm">
+                <form method="post" id="loginForm">
+                    <label for="sloginUsername">Nome de Usuário</label> <br>
+                    <input type="text" placeholder="Username" id="loginUsername"> <br>
+                    <label for="loginPassword">Senha de Acesso</label> <br>
+                    <input type="password" placeholder="Senha" id="loginPassword"> <br>
+                    <input type="submit" value="Acessar" id="loginSubmit">
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
