--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - SingSpeak</title>
     <link rel="icon" href="styles/images/logotipo.png">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     
