--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <input type="text" placeholder="Username" id="loginUsername" name="loginUsername"> <br>
                     <label for="loginPassword">Senha de Acesso</label> <br>
                     <input type="password" placeholder="Senha" id="loginPassword" name="loginPassword"> <br>
-                    <input type="submit" value="Acessar" id="loginSubmit">
+                    <input type="submit" value="Acessar" name="loginSubmit" id="loginSubmit">
                 </form>
             </div>
         </div>
