--- a/main.html
+++ b/main.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - SingSpeak</title>
-    <link rel="icon" href="styles/images/logotipo.png">
+    <link rel="icon" href="assets/logotipo.png">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<script src="userCodes/main.js"></script>
 </html>
