--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SingSpeak</title>
-    <link rel="icon" href="styles/images/logotipo.png">
+    <link rel="icon" href="assets/logotipo.png">
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div class="mainPage">
         <div class="logo">
-                <img src="styles/images/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
+                <img src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
         </div>
         <div class="mainForms">
-            <div class="singupForm">
+            <div class="signupForm formFront">
                 <form id="signupForm" action="userCodes/registerUser.php" method="post">
                     <label for="signupUsername">Nome de Usuário</label> <br>
                     <input type="text" placeholder="Username" id="signupUsername" name="signupUsername"> <br>
                     <label for="signupEmail">Endereço de Email</label> <br>
                     <input type="email" placeholder="Email" id="signupEmail" name="signupEmail"> <br>
                     <label for="singupPassword">Senha de Acesso</label> <br>
-                    <input type="password" placeholder="Senha" id="singupPassword" name="singupPassword"> <br>
-                    <input type="submit" value="Cadastrar" id="signupSubmit">
+                    <input type="password" placeholder="Senha" id="signupPassword" name="signupPassword"> <br>
+                    <input type="submit" value="Cadastrar" id="signupSubmit" disabled>
                 </form>
             </div>
-            <div class="loginForm">
+            <div class="loginForm formBehind">
                 <form id="loginForm" action="userCodes/acessUser.php" method="post">
                     <label for="sloginUsername">Nome de Usuário</label> <br>
                     <input type="text" placeholder="Username" id="loginUsername" name="loginUsername"> <br>
                     <label for="loginPassword">Senha de Acesso</label> <br>
                     <input type="password" placeholder="Senha" id="loginPassword" name="loginPassword"> <br>
-                    <input type="submit" value="Acessar" name="loginSubmit" id="loginSubmit">
+                    <input type="submit" value="Acessar" name="loginSubmit" id="loginSubmit" disabled>
                 </form>
             </div>
         </div>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<script src="index.js"></script>
 </html>
