--- a/userPage.html
+++ b/userPage.html
@@ -5,12 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SingSpeak</title>
-        <link rel="icon" href="styles/images/logotipo.png">
-        <link rel="stylesheet" href="styles/index.css">
+        <link rel="icon" href="assets/logotipo.png">
+        <link rel="stylesheet" href="styles/userpage.css">
     </head>
-<body>
-    <div>
-        <h1> Seja bem vindo,</h1>
-    </div>
-</body>
+    <body>
+        <div class="socorrodeus">
+            <h1> Seja bem vindo,</h1>
+        </div>
+    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="userCodes/userpage.js"></script>
 </html>
