--- a/userPage.html
+++ b/userPage.html
@@ -9,10 +9,14 @@
         <link rel="stylesheet" href="styles/userpage.css">
     </head>
     <body>
-        <div class="socorrodeus">
-            <h1> Seja bem vindo,</h1>
+        <div>
+            <p id="infoUsername"> Seu nome de usuário é </p><br>
+                <p id="infoEmail"> Seu email é </p><br>
+                    <p id="infoDataCriacao"> Você criou sua conta em </p><br>
+                        <p id="infoPontos"> Você tem estes pontos: </p><br>
+                            <p id="infoNivel"> Você é do nível </p><br>
         </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="userCodes/userpage.js"></script>
+    <script src="userpage.js"></script>
 </html>
