--- a/userPage.html
+++ b/userPage.html
@@ -16,6 +16,9 @@
                         <p id="infoPontos"> Você tem estes pontos: </p><br>
                             <p id="infoNivel"> Você é do nível </p><br>
         </div>
+        <div id="buttonLogout" name="buttonLogout" class="buttonLogout">
+            Sair
+        </div>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="userpage.js"></script>
