--- a/userPage.html
+++ b/userPage.html
@@ -28,7 +28,7 @@
 
             <!-- Container com o Rank e o Nível do Usuário -->
             <div id="containerRankNivelUser" name="containerRankNivelUser" class="containerRankNivelUser">
-                <p id="infoPontos"> Você tem estes pontos: </p><br>
+                <p id="infoPontos"> Você tem </p><br>
                 <p id="infoNivel"> Você é do nível </p><br>
             </div>
 
@@ -54,7 +54,7 @@
                     Alterar Senha
                 </div>
                 <div id="optionsDelete" class="buttonUserPage">
-                    Deletar Conta
+                    Desativar Conta
                 </div>
             </div>
 
@@ -91,11 +91,11 @@
     
             <div id="deleteAccountDiv" name="deleteAccountDiv" class="deleteAccountDiv configForm hiddenElement">
                 <form id="deleteAccountForm" name="deleteAccountForm" class="deleteAccountForm">
-                    <p> Deletar sua Conta </p>
+                    <p> Desativar sua Conta </p>
                     <input id="confirmPasswordOne" type="password" size="15" maxlength="25" placeholder="Senha atual"> <br>
                     <input id="confirmPasswordTwo" type="password" size="15" maxlength="25" placeholder="Confirmar senha atual"> <br>
-                    <input id="confirmDeleteCheckbox" type="checkbox"> Confirmo que quero deletar minha conta! <br>
-                    <input id="confirmDeleteAccountButton" type="submit" value="Deletar Conta" disabled>
+                    <input id="confirmDeleteCheckbox" type="checkbox"> Confirmo que quero desativar minha conta! <br>
+                    <input id="confirmDeleteAccountButton" type="submit" value="Desativar Conta" disabled>
                 </form>
             </div>
         </div>
