--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div class="loginForm formBehind">
                 <form id="loginForm" action="userCodes/acessUser.php" method="post">
-                    <label for="sloginUsername">Nome de Usuário</label> <br>
+                    <label for="loginUsername">Nome de Usuário</label> <br>
                     <input type="text" placeholder="Username" id="loginUsername" name="loginUsername" size="15" maxlength="25"> <br>
                     <label for="loginPassword">Senha de Acesso</label> <br>
                     <input type="password" placeholder="Senha" id="loginPassword" name="loginPassword" size="15" maxlength="25"> <br>
