--- a/main.html
+++ b/main.html
@@ -9,8 +9,24 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    
+    <div class="mainDiv">
+        <div class="leftSide">
+            <div class="musicList" id="musicList">
+                <div class="musicModel" id="musicModel">
+                    <div class="musicName" id="musicName"> Nome da Música </div>
+                    <div class="playButton"> Clique </div>
+                </div>
+            </div>
+        </div>
+        <div class="rightSide">
+            <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
+            <div class="musicInfo">
+                <div class="musicArtist"> Artista </div>
+                <div class="userMaxPoints"> Pontuação Máxima </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-<script src="userCodes/main.js"></script>
+<script src="main.js"></script>
 </html>
