--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <input type="text" placeholder="Username" id="signupUsername" name="signupUsername" size="15" maxlength="25"> <br>
                     <label for="signupEmail">Endereço de Email</label> <br>
                     <input type="email" placeholder="Email" id="signupEmail" name="signupEmail" size="15" maxlength="100"> <br>
-                    <label for="singupPassword">Senha de Acesso</label> <br>
+                    <label for="signupPassword">Senha de Acesso</label> <br>
                     <input type="password" placeholder="Senha" id="signupPassword" name="signupPassword" size="15" maxlength="25"> <br>
                     <input type="submit" value="Cadastrar" id="signupSubmit" disabled>
                 </form>
