--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title>SingSpeak</title>
     <link rel="icon" href="assets/logotipo.png">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="mainDiv">
@@ -18,7 +19,7 @@
             <div class="musicList" id="musicList">
                 <div class="musicModel" id="musicModel" data-artist="" data-idnivel="" data-cover="">
                     <div class="musicName" id="musicName"> Nome da Música </div>
-                    <div class="playButton"> Clique </div>
+                    <div class="playButton"> <span class="material-symbols-outlined">play_circle</span> </div>
                 </div>
             </div>
         </div>
