--- a/main.html
+++ b/main.html
@@ -13,23 +13,47 @@
     <div class="mainDiv">
         <div class="leftSide">
             <div class="userInfo" id="userInfo" data-idnivel="">
-                <div class="username"> Olá, </div>
                 <div class="userlevel"> Nível: </div>
             </div>
             <div class="musicList" id="musicList">
-                <div class="musicModel" id="musicModel" data-artist="" data-idnivel="" data-cover="">
+                <div class="musicModel" id="musicModel" data-artist="" data-idnivel="" data-cover="" data-idMusica="">
                     <div class="musicName" id="musicName"> Nome da Música </div>
                     <div class="playButton"> <span class="material-symbols-outlined">play_circle</span> </div>
                 </div>
             </div>
         </div>
         <div class="rightSide">
+            <div class="closedSideBar">
+                <div class="sideBarButton sideOption">
+                    <span class="material-symbols-outlined">menu</span>
+                </div>
+            </div>
             <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
             <div class="musicInfo">
                 <div class="musicArtist"> Artista </div>
                 <div class="userMaxPoints"> Pontuação Máxima </div>
             </div>
-            <div class="buttonLogout" id="buttonLogout">
+            
+        </div>
+        <div class="sideBar">
+            <div class="topSideBar">
+                <div class="logoSingSpeak">
+                    Logo
+                </div>
+                <div class="sideBarButton sideOption">
+                    <span class="material-symbols-outlined">menu</span>
+                </div>
+            </div>
+            <div class="sideBarUsername sideOption">
+                Nome de Usuário
+            </div>
+            <div class="sideBarUserPage sideOption">
+                Página do Usuário 
+            </div>
+            <div class="sideBarMusicPage sideOption">
+                Músicas
+            </div>
+            <div class="buttonLogout sideOption" id="buttonLogout">
                 Sair
             </div>
         </div>
