--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -24,6 +24,11 @@
             </div>
         </div>
         <div class="rightDiv">
+            <div class="closedSideBar">
+                <div class="sideBarButton sideOption">
+                    <span class="material-symbols-outlined">menu</span>
+                </div>
+            </div>
             <div class="youtubeVid">
                 <iframe width="560" height="315" src="" 
                 title="YouTube video player" frameborder="0" id="ytPlayer"
@@ -47,6 +52,28 @@
                         Artista, Ano
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="sideBar">
+            <div class="topSideBar">
+                <div class="logoSingSpeak">
+                    Logo
+                </div>
+                <div class="sideBarButton sideOption">
+                    <span class="material-symbols-outlined">menu</span>
+                </div>
+            </div>
+            <div class="sideBarUsername sideOption">
+                Nome de Usuário
+            </div>
+            <div class="sideBarUserPage sideOption">
+                Página do Usuário 
+            </div>
+            <div class="sideBarMusicPage sideOption">
+                Músicas
+            </div>
+            <div class="buttonLogout sideOption" id="buttonLogout">
+                Sair
             </div>
         </div>
     </div>
