--- a/userPage.html
+++ b/userPage.html
@@ -37,6 +37,9 @@
                 <div id="buttonLogout" name="buttonLogout" class="buttonLogout buttonUserPage">
                     Sair
                 </div>
+                <div id="buttonMusics" name="buttonMusics" class="buttonMusics buttonUserPage">
+                    Músicas
+                </div>
                 <div id="buttonConfig" name="buttonConfig" class="buttonConfig buttonUserPage">
                     Configurações
                 </div>
