--- a/main.html
+++ b/main.html
@@ -28,10 +28,12 @@
                     <span class="material-symbols-outlined">menu</span>
                 </div>
             </div>
-            <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
-            <div class="musicInfo">
-                <div class="musicArtist"> Artista </div>
-                <div class="userMaxPoints"> Pontuação Máxima </div>
+            <div class="selectedMusicInfo" data-idMusica="">
+                <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
+                <div class="musicInfo">
+                    <div class="musicArtist"> Artista </div>
+                    <div class="userMaxPoints"> Pontuação Máxima </div>
+                </div>
             </div>
             
         </div>
