--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -19,7 +19,10 @@
             </div>
             <div class="ranking">
                 <div class="posicaoRanking">
-                    Posição
+                    <div class="posicaoUsername">
+                    </div>
+                    <div class="posicaoPontuacao">
+                    </div>
                 </div>
             </div>
         </div>
