--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Página de Acesso</title>
     <link rel="icon" href="assets/logotipo.png">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="mainPage">
+        <div class="popup animate__animated">
+            <div class="popupCloseButton"><span class="material-symbols-outlined popupCloseButtonIcon">cancel</span></div>
+            <div class="popupContent"></div>
+        </div>
         <div class="logo">
                 <img src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
         </div>
