--- a/main.html
+++ b/main.html
@@ -12,6 +12,10 @@
 </head>
 <body>
     <div class="mainDiv">
+        <div class="popup animate__animated">
+            <div class="popupCloseButton"><span class="material-symbols-outlined popupCloseButtonIcon">cancel</span></div>
+            <div class="popupContent"></div>
+        </div>
         <div class="sideBar animate__animated">
             <div class="sideBarTop">
                 <div class="sideBarLinks">
