--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -15,7 +15,7 @@
     <div class="mainDiv">
         <div class="leftDiv">
             <div class="musicCover">
-                <img src="../assets/logotipo.png" alt="Álbum da Música">
+                <img src="../assets/logotipo.png" alt="Álbum da Música" class="musicCoverImage">
             </div>
             <div class="ranking">
                 <div class="posicaoRanking">
@@ -36,7 +36,7 @@
             <div class="playArea">
                 <div class="playOptions">
                     <div class="playButton">
-                        <span class="material-symbols-outlined">play_circle</span>
+                        <span class="material-symbols-outlined playButtonIcon">play_circle</span>
                     </div>
                     <div class="playQuiz">
                         Quiz
