--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -38,18 +38,32 @@
                     <div class="playButton">
                         <span class="material-symbols-outlined playButtonIcon">play_circle</span>
                     </div>
-                    <div class="playQuiz">
-                        Quiz
-                    </div>
                 </div>
                 <div class="musicInfo" data-idmusica="" data-idnivel="">
-                    <div class="musicTitle">
-                        Título da Música
+                    <div class="musicTitle"></div>
+                    <div class="musicArtistYear"></div>
+                </div>
+            </div>
+        </div>
+        <div class="sideBar animate__animated openSideBar">
+            <div class="sideBarTop">
+                <div class="sideBarLinks">
+                    <div class="sideBarUserPage sideBarOption">
+                        <span class="material-symbols-outlined">account_circle</span>
+                        Minha Conta
                     </div>
-                    <div class="musicArtistYear">
-                        Artista, Ano
+                    <div class="sideBarMusicPage sideBarOption">
+                        <span class="material-symbols-outlined">lyrics</span>
+                        Músicas
+                    </div>
+                    <div class="buttonLogout sideBarOption" id="buttonLogout">
+                        <span class="material-symbols-outlined">logout</span>
+                        Sair
                     </div>
                 </div>
+            </div>
+            <div class="sideBarUsername">
+                Nome de Usuário
             </div>
         </div>
     </div>
