--- a/userCodes/userpage.html
+++ b/userCodes/userpage.html
@@ -5,8 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Página do Usuário</title>
-        <link rel="icon" href="assets/logotipo.png">
-        <link rel="stylesheet" href="styles/userpage.css">
+        <link rel="icon" href="../assets/logotipo.png">
+        <link rel="stylesheet" href="../styles/userpage.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     </head>
     <body>
         <!-- Container que contém todos as informações da Página -->
@@ -15,7 +16,7 @@
             <!-- Container com a imagem da Tela de Usuário -->
             <div id="containerHeader" name="containerHeader" class="containerHeader">
                 <div id="imageUserPage" name="imageUserPage" class="imageUserPage">
-                    <img id="imageUserPageFile" src="assets/logotipo.png" alt="Imagem do Usuário">
+                    <img id="imageUserPageFile" src="../assets/logotipo.png" alt="Imagem do Usuário">
                 </div>
             </div>
 
@@ -35,12 +36,15 @@
             <!-- Container com os Botões "Sair" e "Configurações" -->
             <div id="containerButtons" name="containerButtons" class="containerButtons">
                 <div id="buttonLogout" name="buttonLogout" class="buttonLogout buttonUserPage">
+                    <span class="material-symbols-outlined">logout</span>
                     Sair
                 </div>
                 <div id="buttonMusics" name="buttonMusics" class="buttonMusics buttonUserPage">
+                    <span class="material-symbols-outlined">lyrics</span>
                     Músicas
                 </div>
                 <div id="buttonConfig" name="buttonConfig" class="buttonConfig buttonUserPage">
+                    <span class="material-symbols-outlined">manage_accounts</span>
                     Configurações
                 </div>
             </div>
