--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 <img src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
         </div>
         <div class="mainForms">
-            <div class="signupForm formFront accessForms">
-                <form id="signupForm" action="userCodes/registerUser.php" method="post">
-                    <label for="signupUsername">Nome de Usuário</label> <br>
-                    <input type="text" placeholder="Username" id="signupUsername" name="signupUsername" size="15" maxlength="25"> <br>
-                    <label for="signupEmail">Endereço de Email</label> <br>
-                    <input type="email" placeholder="Email" id="signupEmail" name="signupEmail" size="15" maxlength="100"> <br>
-                    <label for="signupPassword">Senha de Acesso</label> <br>
-                    <input type="password" placeholder="Senha" id="signupPassword" name="signupPassword" size="15" maxlength="25"> <br>
-                    <input type="submit" value="Cadastrar" id="signupSubmit" disabled>
-                </form>
-            </div>
+            <div class="signupForm formFront accessForms selectedSignup">
+                    <form id="signupForm" action="userCodes/registerUser.php" method="post">
+                        <label for="signupUsername">Nome de Usuário</label> <br>
+                        <input type="text"  id="signupUsername" name="signupUsername" size="15" maxlength="25"> <br>
+                        <label for="signupEmail">Endereço de Email</label> <br>
+                        <input type="email"  id="signupEmail" name="signupEmail" size="15" maxlength="100"> <br>
+                        <label for="signupPassword">Senha de Acesso</label> <br>
+                        <input type="password"  id="signupPassword" name="signupPassword" size="15" maxlength="25"> <br>
+                    </form>
+                    <button type="submit" class="signupSubmit" disabled>Cadastrar</button>
+                </div>
             <div class="loginForm formBehind accessForms">
                 <form id="loginForm" action="userCodes/acessUser.php" method="post">
                     <label for="loginUsername">Nome de Usuário</label> <br>
-                    <input type="text" placeholder="Username" id="loginUsername" name="loginUsername" size="15" maxlength="25"> <br>
+                    <input type="text"  id="loginUsername" name="loginUsername" size="15" maxlength="25"> <br>
                     <label for="loginPassword">Senha de Acesso</label> <br>
-                    <input type="password" placeholder="Senha" id="loginPassword" name="loginPassword" size="15" maxlength="25"> <br>
-                    <input type="submit" value="Acessar" name="loginSubmit" id="loginSubmit" disabled>
+                    <input type="password"  id="loginPassword" name="loginPassword" size="15" maxlength="25"> <br>
                 </form>
+                <button type="submit" name="loginSubmit" class="loginSubmit" disabled>Acessar</button>
             </div>
         </div>
     </div>
