--- a/musicPages/main.html
+++ b/musicPages/main.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SingSpeak</title>
-    <link rel="icon" href="assets/logotipo.png">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="../assets/logotipo.png">
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -46,14 +46,17 @@
             </div>
             <div class="musicList" id="musicList">
                 <div class="musicModel" id="musicModel" data-idnivel="" data-idMusica="">
-                    <div class="musicName" id="musicName"></div>
+                    <div class="musicBasicInfo">
+                        <div class="musicName"></div>
+                        <div class="musicLevel"></div>
+                    </div>
                     <div class="playButtonArea"> <span class="material-symbols-outlined playButton">play_circle</span> </div>
                 </div>
             </div>
         </div>
         <div class="rightSide">
             <div class="selectedMusicInfo" data-idMusica="">
-                <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
+                <div class="selectMusicCover"> <img class="selectMusicCoverImage" src="../assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage"> </div>
                 <div class="musicInfo">
                     <div class="musicArtist"></div>
                     <div class="userMaxPoints"></div>
