--- a/musicPages/main.html
+++ b/musicPages/main.html
@@ -13,7 +13,6 @@
 <body>
     <div class="mainDiv">
         <div class="popup animate__animated">
-            <div class="popupCloseButton"><span class="material-symbols-outlined popupCloseButtonIcon">cancel</span></div>
             <div class="popupContent"></div>
         </div>
         <div class="sideBar animate__animated">
@@ -42,7 +41,7 @@
                 <div class="sideBarButton sideOption">
                     <span class="material-symbols-outlined">double_arrow</span>
                 </div>
-                <div class="userlevel"> Nível </div>
+                <div class="userlevel animate__animated"> Nível </div>
             </div>
             <div class="musicList" id="musicList">
                 <div class="musicModel" id="musicModel" data-idnivel="" data-idMusica="">
@@ -67,5 +66,6 @@
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.core.min.js"></script>
 <script src="main.js"></script>
 </html>
