--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -19,16 +19,14 @@
             </div>
             <div class="ranking">
                 <div class="posicaoRanking">
-                    <div class="posicaoUsername">
-                    </div>
-                    <div class="posicaoPontuacao">
-                    </div>
+                    <div class="posicaoPontuacao"></div>
+                    <div class="posicaoUsername"></div>
                 </div>
             </div>
         </div>
         <div class="rightDiv">
-            <div class="youtubeVid">
-                <iframe width="560" height="315" src="" 
+            <div class="youtubeFrame">
+                <iframe class="youtubePlayer" width="560" height="315" src="" 
                 title="YouTube video player" frameborder="0" id="ytPlayer"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                 allowfullscreen></iframe>
