--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="popupContent"></div>
         </div>
         <div class="logo">
-                <img src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage">
+                <img src="assets/logotipo.png" alt="Logotipo do SingSpeak" class="logoimage animate__animated">
                 <div class="logotitle">
                     <div class="logoname">SingSpeak</div>
                     <div class="logomoto">Aprenda Inglês Cantando!</div>
