--- a/musicPages/main.html
+++ b/musicPages/main.html
@@ -63,6 +63,12 @@
             </div>
             
         </div>
+        <div class="levelUpArea levelUpInactive">
+            <div class="levelUpDiv animate__animated">
+              <div class="levelUpContent"></div>
+              <div class="levelUpClose">Okay</div>
+            </div>
+          </div>
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
