--- a/musicPages/musicMainPage.html
+++ b/musicPages/musicMainPage.html
@@ -67,5 +67,6 @@
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.core.min.js"></script>
 <script src="musicMainPage.js"></script>
 </html>
